[gd_scene load_steps=12 format=4 uid="uid://cl02oq07t1u1"]

[ext_resource type="Script" uid="uid://be0gk2tner74e" path="res://Scripts/trash_can.gd" id="1_t3ghh"]
[ext_resource type="Texture2D" uid="uid://yagrq7cytnxt" path="res://Models/Textures/palette1.png" id="2_3sehr"]
[ext_resource type="Material" uid="uid://bdr5jc76qtjqa" path="res://Materials/stupid_outline.tres" id="3_3sehr"]

[sub_resource type="BoxShape3D" id="BoxShape3D_aqgau"]
size = Vector3(0.433472, 0.75351, 0.4021)

[sub_resource type="BoxShape3D" id="BoxShape3D_8cuat"]
size = Vector3(1, 1, 0.798706)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vpc0x"]
resource_name = "Palette"
cull_mode = 2
albedo_texture = ExtResource("2_3sehr")
roughness = 0.5
texture_filter = 2

[sub_resource type="ArrayMesh" id="ArrayMesh_p2wok"]
_surfaces = [{
"aabb": AABB(-14.512, -15.8791, -52.5538, 29.024, 35.3089, 53.1835),
"format": 34359742465,
"index_count": 282,
"index_data": PackedByteArray("JQABAAIAJQAmAAEAAQAmACcAKAAmACUAJgApACcAKAApACYAAQAnACoAKgAnACkAAQAqAAQABAACAAEAKgAFAAQAKgApAAUABAAGAAIABQAIAAQABgAEAAgAJQACACsAJQArACgAKwACAAcAAgAGAAcAAwArAAcAKAArAAMAKAADACwALQAsAAMALQAoACwABwAKAAMALQADAAoACwAHAAYABwALAAoALgAoAC0AKQAoAC4ALwAtAAoALwAAAC0ALgAtAAAALwAKAA8ACgALAA8ADAAAAC8ADAAuAAAADAAvAA8AMAAuAAwADwAOAAwAMAAMAA4AEAAPAAsADwAQAA4AMQAuADAAKQAuADEAMAAOADIAMAAyADEAKQAxADMAMQAJADMAKQAzAAkAMQAyAAkAKQAJAAUAMgAOAA0ACQAyAA0ADQAFAAkADgAQAA0ADQAIAAUACAANABAAEAALABIACAAQABQAEAASABQACAAUABEABgAIABEAEwAUABIACwATABIAEwARABQACwAGABMABgARABMANAAWADUAFQA0ADUANAAZABYAFQAZADQAFgAXADUAFQA1ABcAGAAWABkAFwAWABgAFQAbABkAGAAZABsAFwAYABoAGgAVABcAGgAYABsAGwAVABwAGgAcABUAGgAbABwAHQAeAB8AHgAgAB8AHwAgACEAHwAhAB0AHgAiACAAHQAhACMAJAAiAB4AHQAkAB4AJAAjACIAHQAjACQA"),
"lods": [26.0117, PackedByteArray("AAABAAIAAAACAAMABAACAAEAAQAFAAQAAQAAAAUABAAGAAIAAwACAAcAAgAGAAcABQAIAAQABgAEAAgAAAAJAAUABwAKAAMAAAADAAoACwAHAAYABwALAAoADAAAAAoADQAFAAkADQAIAAUAAAAOAAkACQAOAA0AAAAMAA4ADAAKAA8ADwAOAAwACgALAA8ADgAQAA0ADwAQAA4ACAANABAAEAAPAAsABgAIABEAEAALABIACwAGABMABgARABMACwATABIACAAUABEACAAQABQAEwARABQAEAASABQAEwAUABIAFQAWABcAFwAWABgAGAAWABkAFQAZABYAFwAYABoAGgAVABcAGAAZABsAGgAYABsAFQAbABkAGgAbABwAGwAVABwAGgAcABUAHQAeAB8AHgAgAB8AHwAgACEAHwAhAB0AHgAiACAAHQAhACMAJAAiAB4AHQAkAB4AJAAjACIAHQAjACQA")],
"name": "Palette",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 54,
"vertex_data": PackedByteArray("rIRdwf8nZUEYNyE/3r9DQboeccGVdEvC2r9DwboeccGVdEvCKjFowWqtTMGVdEvCXGxOQehZV8GVdEvCLjFoQWqtTMGVdEvC+xNMwYwBVcGVdEvCWGxOwehZV8GVdEvCABRMQYwBVcGVdEvCLjFoQS1jS0GVdEvCKjFowS1jS0GVdEvC+xNMwU63U0GVdEvC2r9DwXzUb0GVdEvCXGxOQaoPVkGVdEvC3r9DQXzUb0GVdEvCWGxOwaoPVkGVdEvCABRMQU63U0GVdEvCABRMQYwBVcGOHdXA+xNMwU63U0GOHdXA+xNMwYwBVcGOHdXAABRMQU63U0GOHdXAuPx2QM8QfsEyjVDCrvx2wJjkUcEPN1LCrvx2wM8QfsEyjVDCrvx2wJjkUcE7aEfCuPx2QJjkUcEPN1LCrvx2wM8QfsE7aEfCuPx2QJjkUcE7aEfCuPx2QM8QfsE7aEfCxaKwQDwQkUE3bOM9v6KwwCBwm0Eg4TvAxaKwQCBwm0Eg4TvAxaKwQErDOkEg4TvAxaKwQErDOkE3bOM9v6KwwErDOkEg4TvAv6KwwErDOkE3bOM9v6KwwDwQkUE3bOM92r9DwboeccEYNyE/3r9DQboeccEYNyE/sYRdQT1yZsEYNyE/rIRdwT1yZsEYNyE/LjFoQWqtTMEYNyE/sYRdQT1yZsGVdEvCrIRdwT1yZsGVdEvCKjFowWqtTMEYNyE/KjFowS1jS0EYNyE/2r9DwXzUb0EYNyE/rIRdwf8nZUGVdEvC3r9DQXzUb0EYNyE/sYRdQf8nZUEYNyE/sYRdQf8nZUGVdEvCLjFoQS1jS0EYNyE/uPx2QFppd8EPN1LCrvx2wFppd8EPN1LC")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_1w6v2"]
resource_name = "trash_can_Cube_424"
_surfaces = [{
"aabb": AABB(-14.512, -15.8791, -52.5538, 29.024, 35.3089, 53.1835),
"attribute_data": PackedByteArray("imiOPsguST4aK5g+eGJePiYqjz54Yl4+qAGZPijEXD6XU44+KMRcPqgBmT6wpEo+l1OOPrCkSj4ZK5g+WAZJPiUqjz5YBkk+I1yYPgBGSj5O644+UCtKPhz5jj4ARko+JSqPPlgGST6XU44+WAZJPhormD5YBkk+l1OOPrCkSj7xaZg+UCtKPiNcmD7QIl0+TuuOPng9XT6XU44+KMRcPpdTjj54Yl4+HPmOPtAiXT4lKo8+eGJePqgBmT4oxFw+qAGZPrCkSj6oAZk+WAZJPvFpmD54PV0+GSuYPnhiXj6oAZk+eGJePiNcmD7QIl0+I1yYPgBGSj4jXJg+0CJdPiNcmD4ARko+HPmOPtAiXT4jXJg+AEZKPhz5jj4ARko+I1yYPtAiXT4c+Y4+0CJdPiNcmD7QIl0+HPmOPtAiXT4jXJg+0CJdPhz5jj4ARko+HPmOPtAiXT4c+Y4+AEZKPhz5jj7QIl0+I1yYPgBGSj4c+Y4+AEZKPiNcmD4ARko+HPmOPgBGSj4ZK5g+gGJePiYqjz54Yl4+JiqPPnhiXj4aK5g+eGJePiUqjz54Yl4+GiuYPnhiXj4ZK5g+eGJePiYqjz54Yl4+JSqPPnhiXj4ZK5g+eGJePhkrmD54Yl4+JSqPPnhiXj4lKo8+eGJePhkrmD6AYl4+JiqPPnhiXj4ZK5g+eGJePiYqjz6AYl4+JSqPPnhiXj4lKo8+eGJePiYqjz54Yl4+GSuYPnhiXj4aK5g+eGJePhkrmD54Yl4+GiuYPnhiXj5bk349kI4HPauLNj2Qjgc9W5N+PZCOBz27izY9kI4HPVuTfj2Qjgc9u4s2PZCOBz27izY9kI4HPVuTfj2Qjgc9u4s2PZCOBz2rizY9kI4HPauLNj2Qjgc9u4s2PZCOBz2rizY9kI4HPVuTfj2Qjgc9W5N+PZCOBz2rizY9kI4HPVuTfj2Qjgc9W5N+PZCOBz1bk349kI4HPVuTfj2Qjgc9JSqPPnhiXj4ZK5g+eGJePm+Sjj5YBkk+JiqPPlgGST5O644+gD1dPpdTjj4g6V0+8WmYPoA9XT6oAZk+uH9JPtDCmD54Yl4+GiuYPnhiXj6oAZk+KMRcPqgBmT6wpEo+qAGZPijEXD6oAZk+sKRKPopojj4IOl4+GiuYPnhiXj4mKo8+eGJePqgBmT4oxFw+teyYPgg6Xj6XU44+sKRKPpdTjj4oxFw+JSqPPlgGST6KaI4+yC5JPrXsmD7ILkk+GSuYPlgGST6oAZk+sKRKPhormD5YBkk+JiqPPlgGST4lKo8+WAZJPpdTjj5YBkk+JiqPPlgGST6XU44+WAZJPpdTjj6wpEo+imiOPsguST4aK5g+eGJePrXsmD4IOl4+qAGZPnhiXj4ZK5g+eGJePqgBmT54Yl4+qAGZPijEXD617Jg+CDpePhormD5YBkk+qAGZPlgGST617Jg+yC5JPhkrmD5YBkk+teyYPsguST6oAZk+sKRKPqgBmT5YBkk+JSqPPnhiXj6XU44+eGJePopojj4IOl4+JiqPPnhiXj6KaI4+CDpePpdTjj4oxFw+l1OOPnhiXj6XU44+sKRKPpdTjj4oxFw+l1OOPrCkSj6XU44+KMRcPhormD54Yl4+JiqPPoBiXj4mKo8+eGJePiYqjz6AYl4+GiuYPnhiXj4aK5g+gGJePg=="),
"format": 34359742487,
"index_count": 282,
"index_data": PackedByteArray("XQABAAIAXQBeAAEACQAKAAsAXwANAAoADABfAAoACgAJAA4ACgAOAGAADwALAAoADgAJABAAYQALAA8AYQAPABMACwBhABUAEQAQAAkAEwBiABIAYgAUABIAFgAVABIAYwAVABYAFQBjABEAYwAWABsAEAARABcAFwARABoAEAAXABgAGABkABAAZAAZABAAZQAcABoAZgBlABoAZwBoAGkAZwBqAGgAawBsAG0AawBuAGwAbABuAG8AcABrAHEAcgBrAHAAbgBrAHIAcgBwAHMAbgByAHQAdAByAHUAbgB0AHYAHQAeAB8AHQAgAB4AdwAIAAcAdwB4AAgAIQAiACMAIQAkACIAJQAmACcAJQAoACYAKQAqACsAKQAsACoALQAuAC8ALQAwAC4AeQAAAHoAeQB7AAAAfAB9AAYAfAB+AH0AfwCAAIEAfwCCAIAAgwCEAAMAgwCFAIQAhgCHAIgAhgCJAIcAigAFAIsAigCMAAUAjQCOAI8AjQCQAI4AkQAEAJIAkQCTAAQAlACVAJYAlACXAJUAmAAyAJkAmAA0ADIANQA2ADcANQA4ADYAOQA6ADsAOQA8ADoAPQA+AD8APQBAAD4ARABBAJoAQQBEAEIAQQBCAEMAMQCbADMAMQCcAJsARQBGAEcARgBFAEgARgBIAJ0ASQBKAEsASQBMAEoATQBOAE8ATQBQAE4AUQBSAFMAUQBUAFIAVQBWAFcAVQBYAFYAWQBaAFsAWQBcAFoA"),
"lods": [26.0117, PackedByteArray("AAABAAIAAQAAAAMAAAACAAQAAAAFAAMAAAAEAAYAAAAHAAUACAAAAAYAAAAIAAcACQAKAAsADAANAAoACgAOAAwACgAJAA4ADwALAAoADgAJABAAEQAQAAkAEgALAA8AEgAPABMAEwAUABIACwASABUAFgAVABIAEAARABcAEAAXABgAGAAZABAAFwARABoAFQAaABEAGgAVABYAGgAWABsAGwAcABoAHQAeAB8AHQAgAB4AIQAiACMAIQAkACIAJQAmACcAJQAoACYAKQAqACsAKQAsACoALQAuAC8ALQAwAC4AMQAyADMAMQA0ADIANQA2ADcANQA4ADYAOQA6ADsAOQA8ADoAPQA+AD8APQBAAD4AQQBCAEMAQQBEAEIARQBGAEcARgBFAEgASQBKAEsASQBMAEoATQBOAE8ATQBQAE4AUQBSAFMAUQBUAFIAVQBWAFcAVQBYAFYAWQBaAFsAWQBcAFoA")],
"material": SubResource("StandardMaterial3D_vpc0x"),
"name": "Palette",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 158,
"vertex_data": PackedByteArray("rIRdwf8nZUEYNyE/3r9DQboeccGVdEvC2r9DwboeccGVdEvCLjFoQWqtTMGVdEvCKjFowWqtTMGVdEvCLjFoQS1jS0GVdEvCKjFowS1jS0GVdEvC3r9DQXzUb0GVdEvC2r9DwXzUb0GVdEvCABRMQU63U0GVdEvCWGxOwaoPVkGVdEvC+xNMwU63U0GVdEvC2r9DwXzUb0GVdEvCKjFowS1jS0GVdEvC3r9DQXzUb0GVdEvCKjFowS1jS0GVdEvCXGxOQaoPVkGVdEvCABRMQYwBVcGVdEvCWGxOwehZV8GVdEvCKjFowWqtTMGVdEvC2r9DwboeccGVdEvC+xNMwYwBVcGVdEvC2r9DwboeccGVdEvCLjFoQWqtTMGVdEvCLjFoQS1jS0GVdEvC3r9DQXzUb0GVdEvCXGxOQehZV8GVdEvC3r9DQboeccGVdEvCLjFoQWqtTMGVdEvCABRMQYwBVcGVdEvCABRMQU63U0GOHdXAABRMQYwBVcGOHdXAABRMQU63U0GVdEvC+xNMwYwBVcGOHdXAABRMQU63U0GOHdXA+xNMwU63U0GOHdXAABRMQYwBVcGOHdXA+xNMwYwBVcGVdEvCABRMQYwBVcGOHdXA+xNMwYwBVcGOHdXAABRMQYwBVcGVdEvC+xNMwU63U0GVdEvC+xNMwYwBVcGOHdXA+xNMwU63U0GOHdXA+xNMwYwBVcGVdEvCABRMQU63U0GVdEvC+xNMwU63U0GOHdXAABRMQU63U0GOHdXA+xNMwU63U0GVdEvCuPx2QM8QfsEyjVDCrvx2wJjkUcEPN1LCrvx2wM8QfsEyjVDCuPx2QJjkUcEPN1LCrvx2wJjkUcE7aEfCuPx2QJjkUcEPN1LCuPx2QJjkUcE7aEfCrvx2wJjkUcEPN1LCrvx2wM8QfsE7aEfCuPx2QJjkUcE7aEfCuPx2QM8QfsE7aEfCrvx2wJjkUcE7aEfCrvx2wM8QfsE7aEfCuPx2QM8QfsEyjVDCrvx2wM8QfsEyjVDCuPx2QM8QfsE7aEfCrvx2wM8QfsEyjVDCrvx2wJjkUcE7aEfCrvx2wM8QfsE7aEfCrvx2wJjkUcEPN1LCuPx2QJjkUcE7aEfCuPx2QM8QfsEyjVDCuPx2QM8QfsE7aEfCuPx2QJjkUcEPN1LCxaKwQDwQkUE3bOM9v6KwwCBwm0Eg4TvAxaKwQCBwm0Eg4TvAv6KwwDwQkUE3bOM9xaKwQDwQkUE3bOM9v6KwwErDOkE3bOM9v6KwwDwQkUE3bOM9xaKwQErDOkE3bOM9v6KwwDwQkUE3bOM9v6KwwErDOkEg4TvAv6KwwCBwm0Eg4TvAv6KwwErDOkE3bOM9v6KwwCBwm0Eg4TvAxaKwQErDOkEg4TvAxaKwQCBwm0Eg4TvAv6KwwErDOkEg4TvAxaKwQCBwm0Eg4TvAxaKwQErDOkE3bOM9xaKwQDwQkUE3bOM9xaKwQErDOkEg4TvA2r9DwboeccEYNyE/3r9DQboeccEYNyE/rIRdwf8nZUGVdEvC2r9DwXzUb0GVdEvCWGxOwehZV8GVdEvCrIRdwT1yZsGVdEvCXGxOQehZV8GVdEvCsYRdQf8nZUGVdEvCsYRdQT1yZsGVdEvC3r9DQboeccGVdEvCLjFoQWqtTMEYNyE/LjFoQS1jS0GVdEvCLjFoQWqtTMGVdEvCLjFoQS1jS0EYNyE/rIRdwT1yZsEYNyE/3r9DQboeccEYNyE/2r9DwboeccEYNyE/LjFoQWqtTMEYNyE/sYRdQT1yZsEYNyE/KjFowS1jS0EYNyE/KjFowWqtTMEYNyE/2r9DwXzUb0EYNyE/rIRdwf8nZUEYNyE/sYRdQf8nZUEYNyE/3r9DQXzUb0EYNyE/LjFoQS1jS0EYNyE/3r9DQXzUb0EYNyE/2r9DwXzUb0EYNyE/2r9DwXzUb0GVdEvCrIRdwf8nZUGVdEvC2r9DwXzUb0EYNyE/rIRdwf8nZUGVdEvCKjFowS1jS0EYNyE/rIRdwf8nZUEYNyE/3r9DQboeccGVdEvCsYRdQT1yZsEYNyE/sYRdQT1yZsGVdEvC3r9DQboeccEYNyE/sYRdQT1yZsGVdEvCLjFoQWqtTMEYNyE/sYRdQT1yZsEYNyE/3r9DQXzUb0EYNyE/sYRdQf8nZUGVdEvCsYRdQf8nZUEYNyE/3r9DQXzUb0GVdEvCsYRdQf8nZUEYNyE/LjFoQS1jS0EYNyE/sYRdQf8nZUGVdEvC2r9DwboeccEYNyE/rIRdwT1yZsGVdEvCrIRdwT1yZsEYNyE/2r9DwboeccGVdEvCrIRdwT1yZsEYNyE/KjFowWqtTMEYNyE/rIRdwT1yZsGVdEvCKjFowS1jS0EYNyE/KjFowWqtTMGVdEvCKjFowS1jS0GVdEvCKjFowWqtTMEYNyE/uPx2QFppd8EPN1LCrvx2wFppd8EPN1LCrvx2wFppd8EPN1LCrvx2wFppd8EPN1LCuPx2QFppd8EPN1LCuPx2QFppd8EPN1LCgVqB2oeChcD/fwAA////v/9/AAD///+/gdqBWv///799JYFaKIDNv4HafaWb/xSAfSV9pf///7//f///////v/9///////+//////+v/CUD//////7//H//////9//4//////4HaQS3/////fKW+Ev/////9/wBA//////7//z//////9v8EQP////////8///////r/AUD/////+f8CQP/////8/wFA//////v//T///////v//P//////7//4///////z//j//////+//+P///////v/8f/////////z//////fKW+EgAA/3////+/AAD/f////78AAP9/////vwAA/3////+//////////z//////////P/////////8//////////z//f///////v/9///////+//3///////7//f///////v////3////+/////f////7////9/////v////3////+//38AAP///7//fwAA////v/9/AAD///+//38AAP///7//vwAAi/McQ/////8r4ulO/78AAIvz4rz/////////v/9///////+//3///////7//f///////v/9///////+//3//f////z//f/9/////P/9//3////8//3//f////z//fwAA////v/9/AAD///+//38AAP//AAD/fwAA////vwAA/3///wAAAAD/f///AAAAAP9/////vwAA/3///wAA////f////7////9/////v////3////+/////f////7//f8jZ////P/9/yNn///8//3/I2f///z//f8jZ////P/9//3////8//3//f////z//f/9/////P/9//3////8/AAD/f////78AAP9/////vwAA/3////+/AAD/f////7//////////v/////////+//////////7//////////v////3////+/////f////7////9/////v////3////+//38AAP///7//fwAA////v///////v/8f/////////z//////8v8GQP/////6/wFA//////7//z//////+//+P///////v/8f/////4HaQS3///9/////v////3////+/////f////7////9/////v/9//3+O9rfE/3//f1X81MH/f/9/////v/9//3+m+yvC/3//f+/ghs//f/9/efjBw/9//3/MzJjZ/3//fzf7Y8L/f/9/7+CGz/9//3/b9pDE/3//f////7//f/9/ycya2f9///////+//3///////7+BWoHaAdlu0oFagdqB2r7SgVqB2v9//799JX2lLYA2wH0lfaUtgDbAfSV9pS2ANsB9pX0lINt+032lfSXy/rv+faV9JYHavtJ9pX0l/////4HagVqQ/+j/gdqBWpD/6P+B2oFakP/o/32lgdpo/uqBfaWB2mj+6oF9pYHaaP7qgX2lgdr///+/gdp9pZv/FICB2n2l////v4HafaWb/xSAgVp9JdSDM7+BWn0l1IMzv4FafSXUgzO/gVp9Jf///799JYFaKIDNv30lgVr///+/fSWBWiiAzb8AAP9/////vwAA/3////+/AAD/f////78AAP9/////v/////8r4ulO/////yvi6U4AAP9/////v/+/AACL8xxD/78AAIvzHEP///9/////vw==")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_p2wok")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6pcht"]
resource_name = "Palette"
cull_mode = 2
albedo_texture = ExtResource("2_3sehr")
roughness = 0.5
texture_filter = 2

[sub_resource type="ArrayMesh" id="ArrayMesh_e8mos"]
_surfaces = [{
"aabb": AABB(-14.512, -1.07, -1.2733, 29.024, 30.0594, 1.90305),
"format": 34359742465,
"index_count": 204,
"index_data": PackedByteArray("EgAGAAcABwATABIABgAIAAcABwAIABMABgAKAAgACgALAAgAFAAKAAYAFQAIAAsAFQATAAgACgANAAsADQAVAAsAFAAWAAoADQAKABYABgARABQAEQAWABQAEgARAAYAFwATABUAFwAJABMAEgATAAkAFQAMABcADAAJABcADQAMABUAEgAJABgADQAWABkAGAAJABoADAAaAAkAGwASABgAGAAaABsAHAAaAAwAAQASABsAEQASAAEAGwAaAB0AHAAdABoAGwAdAAUAAQAbAAUAHgAdABwADAAeABwABQAdAAQAHgAEAB0ABQAEAAEABAAeAA8ADAAfAB4AHgAfAA8ADAANAB8ABAAPAAMAAQAEAAMAHwADAA8AAQADAAIAHwANAA4ADgANABkAHwAOACAAHwAhAAMAAgADACEAIAAhAB8AIgABAAIAAgAhACIAEQABACIAIAAjACEAIwAgAA4AIgAhACMAEQAiAAAAIgAjAAAAAAAQABEAAAAjABAAIwAOABAAGQAQAA4AEQAQABYAGQAWABAA"),
"lods": [4.69838, PackedByteArray("BQAGAAcABgAIAAcABwAIAAkABwAJAAUABgAKAAgACwAJAAgACgALAAgACwAMAAkADAAFAAkADQAMAAsACgANAAsADAAEAAUADQAKAA4ADAANAA8ADwANAA4ABAAMAA8ADgAKABAADwAOABAAEQAKAAYABQARAAYAEQAQAAoABQAEAAEAEQAFAAEABAAPAAMAEAADAA8AAQAEAAMAAAAQABEAEQABAAAAAAADABAAAQADAAIAAgADAAAAAAABAAIA"), 14.5013, PackedByteArray("AAABAAIAAQADAAIAAgADAAAAAQAEAAMABAAAAAMAAAAFAAEABQAEAAEAAAAEAAUA")],
"name": "Palette",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 36,
"vertex_data": PackedByteArray("LjFoQZex1UEYNyE/2r9DwT3q50EYNyE/3r9DQT3q50EYNyE/3r9DQT3q50EjIEW/2r9DwT3q50EjIEW/rIRdwf+T4kEYNyE/3r9DQdH1iL8YNyE/2r9DwdH1iL8YNyE/2r9DwdH1iL8jIEW/KjFowbSUmj8jIEW/3r9DQdH1iL8jIEW/zCVCwaAUEb+X+6K/uSNgwZDk1EGX+6K/0SVCQaAUEb+X+6K/viNgQSBlpz+X+6K/0SVCQYfj40GX+6K/LjFoQbSUmj8jIEW/LjFoQbSUmj8YNyE/rIRdwZ5Hzr4YNyE/rIRdwZ5Hzr4jIEW/sYRdQZ5Hzr4YNyE/6lpXwWD1kLyX+6K/sYRdQZ5Hzr4jIEW/uSNgwSBlpz+X+6K/KjFowbSUmj8YNyE/71pXQWD1kLyX+6K/KjFowZex1UEjIEW/KjFowZex1UEYNyE/6lpXwR5/30GX+6K/rIRdwf+T4kEjIEW/zCVCwYfj40GX+6K/71pXQR5/30GX+6K/viNgQZDk1EGX+6K/sYRdQf+T4kEjIEW/sYRdQf+T4kEYNyE/LjFoQZex1UEjIEW/")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_u50mg"]
resource_name = "trash_lid_Cube_425"
_surfaces = [{
"aabb": AABB(-14.512, -1.07, -1.2733, 29.024, 30.0594, 1.90305),
"attribute_data": PackedByteArray("qAGZPrCkSj4lKo8+WAZJPhkrmD5YBkk+imiOPsguST4lKo8+WAZJPhkrmD5YBkk+GSuYPlgGST4lKo8+YAZJPqgBmT6wpEo+GSuYPlgGST6KaI4+yC5JPiUqjz5YBkk+GiuYPnhiXj4mKo8+eGJePqgBmT4oxFw+ZX2OPhCsSj6XU44+KMRcPkYnmD4YV0k+qAGZPijEXD7a15g+yLxcPhkrmD6AYl4+RieYPsARXj76LY8+uBFePiYqjz54Yl4+qAGZPijEXD6oAZk+KMRcPhkrmD6AYl4+GiuYPnhiXj4mKo8+eGJePiYqjz54Yl4+l1OOPijEXD6KaI4+yC5JPpdTjj4oxFw+l1OOPijEXD6KaI4+CDpePrXsmD4IOl4+l1OOPrCkSj617Jg+yC5JPhkrmD5YBkk+JSqPPmAGST4mKo8+eGJePopojj4IOl4+imiOPgg6Xj4mKo8+gGJePrXsmD4IOl4+teyYPgg6Xj6KaI4+CDpePopojj4IOl4+qAGZPrCkSj6oAZk+KMRcPqgBmT4oxFw+qAGZPrikSj6XU44+sKRKPopojj7ILkk+l1OOPrCkSj4mmo4+ONpdPmV9jj7AvFw+GbuYPkDaXT4Zu5g+mI5JPtrXmD4QrEo++S2PPhhXST4mmo4+mI5JPrXsmD7ILkk+qAGZPrCkSj617Jg+0C5JPrXsmD7QLkk+teyYPsguST4ZK5g+YAZJPpdTjj4oxFw+l1OOPrCkSj6XU44+sKRKPpdTjj4oxFw+teyYPgg6Xj4aK5g+gGJePhormD54Yl4+teyYPgg6Xj75LY8+GFdJPopojj7QLkk+JpqOPpiOST4lKo8+WAZJPiaajj6Yjkk+l1OOPrCkSj5lfY4+EKxKPopojj7ILkk+RieYPsARXj617Jg+CDpePhm7mD5A2l0+GiuYPoBiXj4Zu5g+QNpdPtrXmD7IvFw+teyYPgg6Xj4Zu5g+mI5JPhkrmD5gBkk+RieYPhhXST617Jg+0C5JPtrXmD4QrEo+teyYPtAuST4Zu5g+mI5JPqgBmT6wpEo+JpqOPjjaXT4mKo8+gGJePvotjz64EV4+imiOPgg6Xj5lfY4+wLxcPopojj4IOl4+JpqOPjjaXT5lfY4+EKxKPpdTjj4oxFw+ZX2OPsC8XD6XU44+sKRKPvotjz64EV4+RieYPsARXj5GJ5g+GFdJPvktjz4YV0k+qAGZPrikSj7a15g+yLxcPqgBmT4oxFw+2teYPhCsSj4lKo8+WAZJPopojj7QLkk+"),
"format": 34359742487,
"index_count": 204,
"index_data": PackedByteArray("IgAMAA0AIgAOAAwADAAOACMAJAAiACAAAQAiACQADgAiAAEAAQAkAAMADgABACUAJQABAAIADgAlAAAABAAmAAYABAAnACYAKAApACoAKAArACkAGwAcAB0AGwAaABwAGQAsAC0AGQAYACwALgAeACEALgAvAB4AMAAxADIAMAAzADEANAA1AB8ANAA2ADUAFQA3ABYAFQAPADcANwAPADgAEwAVADkAOgAVABMADwAVADoAOgATADsADwA6ADwAPAA6ABEADwA8AD0APgA/AAgAPgBAAD8ACQBBAEIACQBDAEEARABFAEYARABHAEUASABJAEoASABLAEkATABNAE4ATABPAE0AUABRAFIAUABTAFEAVABVAFYAVABXAFUAWAASAFkAWABaABIAWwBcAF0AWwBeAFwAXwBgAGEAXwBiAGAAYwBkAGUAYwBmAGQAZwBoAGkAZwAQAGgAagBrAGwAagBtAGsAFABuABcAFABvAG4ABwBwAAUABwBxAHAAcgBzAHQAcgB1AHMACgB2AAsACgB3AHYA"),
"lods": [4.69838, PackedByteArray("AwAMAA0AAwAOAAwADgADAAEADgABAAAAAAABAAIABAAFAAYABAAHAAUACgAHAAsADwAHAAoADwAKABAABwARAAUABwAPABEAEgAFABEACAAFABIACQAFAAgAEQATABIAEwAUABIAEQAVABMAFQAUABMADwAVABEAFAAVABYAFQAPABYAFgAPABAAFAAWABcAFgAQABcACAAYABkAGQAYABoAGQAaABsAGwAaABwAGwAcAB0AHQAcAB4AHQAeAB8A"), 14.5013, PackedByteArray("AAABAAIAAAADAAEABAAFAAYABAAHAAUABwAIAAUACQAFAAgACAAHAAoACgAHAAsA")],
"material": SubResource("StandardMaterial3D_6pcht"),
"name": "Palette",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 120,
"vertex_data": PackedByteArray("LjFoQZex1UEYNyE/2r9DwT3q50EYNyE/3r9DQT3q50EYNyE/rIRdwf+T4kEYNyE/2r9DwT3q50EYNyE/3r9DQT3q50EjIEW/3r9DQT3q50EYNyE/2r9DwT3q50EjIEW/LjFoQZex1UEYNyE/3r9DQT3q50EYNyE/rIRdwf+T4kEYNyE/2r9DwT3q50EYNyE/3r9DQdH1iL8YNyE/2r9DwdH1iL8YNyE/LjFoQbSUmj8YNyE/uSNgwZDk1EGX+6K/KjFowbSUmj8jIEW/0SVCQYfj40GX+6K/LjFoQbSUmj8jIEW/viNgQSBlpz+X+6K/3r9DQdH1iL8jIEW/0SVCQaAUEb+X+6K/zCVCwaAUEb+X+6K/2r9DwdH1iL8jIEW/LjFoQbSUmj8jIEW/LjFoQbSUmj8YNyE/3r9DQdH1iL8jIEW/3r9DQdH1iL8YNyE/2r9DwdH1iL8jIEW/2r9DwdH1iL8YNyE/KjFowbSUmj8jIEW/rIRdwf+T4kEYNyE/KjFowbSUmj8YNyE/KjFowbSUmj8YNyE/rIRdwZ5Hzr4YNyE/sYRdQZ5Hzr4YNyE/KjFowZex1UEYNyE/sYRdQf+T4kEYNyE/3r9DQT3q50EjIEW/2r9DwT3q50EjIEW/2r9DwdH1iL8YNyE/rIRdwZ5Hzr4jIEW/rIRdwZ5Hzr4YNyE/2r9DwdH1iL8jIEW/sYRdQZ5Hzr4jIEW/sYRdQZ5Hzr4YNyE/rIRdwZ5Hzr4YNyE/rIRdwZ5Hzr4jIEW/LjFoQZex1UEYNyE/LjFoQbSUmj8jIEW/LjFoQbSUmj8YNyE/LjFoQZex1UEjIEW/KjFowZex1UEYNyE/rIRdwf+T4kEjIEW/KjFowZex1UEjIEW/6lpXwWD1kLyX+6K/uSNgwSBlpz+X+6K/71pXQWD1kLyX+6K/71pXQR5/30GX+6K/viNgQZDk1EGX+6K/zCVCwYfj40GX+6K/6lpXwR5/30GX+6K/sYRdQf+T4kEYNyE/LjFoQZex1UEjIEW/sYRdQf+T4kEjIEW/sYRdQf+T4kEjIEW/sYRdQf+T4kEYNyE/3r9DQT3q50EjIEW/KjFowbSUmj8YNyE/KjFowZex1UEjIEW/KjFowZex1UEYNyE/KjFowbSUmj8jIEW/sYRdQZ5Hzr4YNyE/3r9DQdH1iL8jIEW/3r9DQdH1iL8YNyE/sYRdQZ5Hzr4jIEW/zCVCwYfj40GX+6K/rIRdwf+T4kEjIEW/6lpXwR5/30GX+6K/2r9DwT3q50EjIEW/6lpXwR5/30GX+6K/KjFowZex1UEjIEW/uSNgwZDk1EGX+6K/rIRdwf+T4kEjIEW/0SVCQaAUEb+X+6K/sYRdQZ5Hzr4jIEW/71pXQWD1kLyX+6K/3r9DQdH1iL8jIEW/71pXQWD1kLyX+6K/viNgQSBlpz+X+6K/sYRdQZ5Hzr4jIEW/71pXQR5/30GX+6K/3r9DQT3q50EjIEW/0SVCQYfj40GX+6K/sYRdQf+T4kEjIEW/viNgQZDk1EGX+6K/sYRdQf+T4kEjIEW/71pXQR5/30GX+6K/LjFoQZex1UEjIEW/6lpXwWD1kLyX+6K/2r9DwdH1iL8jIEW/zCVCwaAUEb+X+6K/rIRdwZ5Hzr4jIEW/uSNgwSBlpz+X+6K/rIRdwZ5Hzr4jIEW/6lpXwWD1kLyX+6K/uSNgwZDk1EGX+6K/KjFowbSUmj8jIEW/uSNgwSBlpz+X+6K/KjFowZex1UEjIEW/zCVCwaAUEb+X+6K/0SVCQaAUEb+X+6K/0SVCQYfj40GX+6K/zCVCwYfj40GX+6K/LjFoQZex1UEjIEW/viNgQSBlpz+X+6K/LjFoQbSUmj8jIEW/viNgQZDk1EGX+6K/2r9DwT3q50EjIEW/rIRdwf+T4kEjIEW//3//f8nMmtn/f/9/N/tjwv9//3////+//3//f+/ghs//f/////+JPP+////+/wBA/3///////7//v////v//P4HafaX///+/faWB2hyABUCBWoHa8v8OAIFagdr///+//3//f1X81MH/f/9/////v/9//3+m+yvC/////2/8Nz48FUUz+PdhHv////////8/wupFMz2/SUL/////LPoWPf+/AAD+//8//////w/8CD7//////v//P/+/AAD+//8/gdqBWv///7+B2oFa////v/9/AAAR+f+//38AABH5/7//fwAAEfn/v/9/AAD///+/fSWBWv///799JX2l////v/9//3/MzJjZfSWBWv///7//f/9/jva3xP9//3/v4IbP/3//f3n4wcP/f/9/2/aQxP9//////4k8/3//////iTyBWn0lHID5v4FafSUcgPm/gVp9Jf///7+BWn0lHID5v4HagVr///+/gdqBWv///799JYFa////v30lgVr///+/////f////7////9/////v////3////+/////f////799JX2l////v30lfaX///+/fSV9pf///7//////JPmSPP////922bss/////03npjP/////9fh6PP////922bss/////9X8az7/////TeemM4HafaUAgAFAgdp9pQCAAUCB2n2lAIABQH2lgdocgAVAfaWB2hyABUB9pYHaHIAFQAAA/3////+/AAD/f////78AAP9/////vwAA/3////+/faV9JfL/8P99pX0l8v/w/32lfSXy//D/faV9Jf///79FM8LqCOquLUUzwuqc67ktRTPC6r7swS1FM8LqLumoLTwVucxh/yohPBW5zG37YGA8FbnMPPiFYTwVuczB/L4gucw8FVzbBDW5zDwVctvONbnMPBWC2182ucw8FVDblzTC6kUzVcKyP8LqRTPzvOBDwupFM37BYj65zMLqTdt/S7nMwuqf25dIuczC6tXbr0a5zMLqJNv2TMLqucwuv6s9wuq5zNzBCkHC6rnMXsBdQ8LquczAvPo7RTM8Ff/oWFJFMzwVzO4vUkUzPBWb8hRSRTM8FRHmbFI8FUUzW/uZHzwVRTPl/RFfPBVFM0D50F8AAP+/EPm7YQAA/78b+UYeAAD/v9f4Nh4AAP+/2PjJYf+/AAD+//8//78AAP7//z//v////v8AQP+///////8/////v4i8iTz///+/iLx2Q////79rvJND////v2a8ZzyBWoHa8v8OAIFagdry/w4A")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_e8mos")

[node name="TrashCan" type="Node3D"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
script = ExtResource("1_t3ghh")

[node name="StaticBody3D" type="StaticBody3D" parent="."]
visible = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0297241, 0.365616, -0.0162354)
shape = SubResource("BoxShape3D_aqgau")

[node name="Area3D" type="Area3D" parent="."]
visible = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.323963, 0.0182757)
shape = SubResource("BoxShape3D_8cuat")

[node name="trash_can" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.91128e-09, 0.0137329, 1.63709e-09, 0, 1.63709e-09, -0.0137329, -0.0137329, -4.91128e-09, -5.8547e-16, 0.0135798, 0.0145512, -0.0133584)
mesh = SubResource("ArrayMesh_1w6v2")
skeleton = NodePath("")

[node name="trash_can2" type="MeshInstance3D" parent="trash_can"]
transform = Transform3D(1.05, 4.5896e-08, -2.00618e-15, -4.5896e-08, 1.05, -1.71067e-07, -5.47124e-15, 1.71067e-07, 1.05, 0, 0, 0)
mesh = SubResource("ArrayMesh_1w6v2")
skeleton = NodePath("")
surface_material_override/0 = ExtResource("3_3sehr")

[node name="trash_lid" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.91128e-09, 0.0137329, 1.63709e-09, 0, 1.63709e-09, -0.0137329, -0.0137329, -4.91128e-09, -5.8547e-16, -0.178029, 0.718987, -0.0116844)
mesh = SubResource("ArrayMesh_u50mg")
skeleton = NodePath("")

[node name="trash_lid2" type="MeshInstance3D" parent="trash_lid"]
transform = Transform3D(1.01, -2.87059e-14, -3.42201e-21, 2.87059e-14, 1.01, -9.72595e-35, 3.42201e-21, 0, 1.01, 0, 0, 0)
mesh = SubResource("ArrayMesh_u50mg")
skeleton = NodePath("")
surface_material_override/0 = ExtResource("3_3sehr")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
